libgcrypt on Mac Intel
Gcrypt on intel doesn't work. It cannot be found for some reason.
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Rémi Denis-Courmont changed title from Gcrypt on Intel to libgcrypt on Mac Intel
changed title from Gcrypt on Intel to libgcrypt on Mac Intel
the config.log shows: configure:59770: gcc -o conftest -Wsign-compare -Wall -I/Users/videolan/thedj/vlc-trunk/./extras/contrib/include -D_INTL_REDIRECT_MACROS -pipe -I/Users/videolan/thedj/vlc-trunk/./extras/contrib/include -DSYS_DARWIN -L/Users/videolan/thedj/vlc-trunk/./extras/contrib/lib conftest.c -lgcrypt -lgpg-error >&5 /usr/bin/ld: Undefined symbols: __gcry_mpih_lshift __gcry_mpih_rshift __gcry_mpih_sub_n __gcry_mpih_mul_1 __gcry_mpih_add_n __gcry_mpih_submul_1 __gcry_mpih_addmul_1 collect2: ld returned 1 exit status configure:59776: $? = 1
perhaps the __ is causing trouble ?
configure:59770: gcc -o conftest -Wsign-compare -Wall -I/Users/videolan/thedj/vlc-trunk/./extras/contrib/include -D_INTL_REDIRECT_MACROS -pipe -I/Users/videolan/thedj/vlc-trunk/./extras/contrib/include -DSYS_DARWIN -L/Users/videolan/thedj/vlc-trunk/./extras/contrib/lib conftest.c -lgcrypt -lgpg-error >&5 /usr/bin/ld: Undefined symbols: __gcry_mpih_lshift __gcry_mpih_rshift __gcry_mpih_sub_n __gcry_mpih_mul_1 __gcry_mpih_add_n __gcry_mpih_submul_1 __gcry_mpih_addmul_1 collect2: ld returned 1 exit status configure:59776: $? = 1
wikiformatted
(In [15202]) * Fix libgcrypt on MacIntel by disabling it's ASM. This fixes #620 (closed)
- hartman added Status::fixed label
added Status::fixed label
- hartman closed
closed