* Fix libgcrypt on MacIntel by disabling it's ASM. This fixes #620